[package]
name = "ark"
version = "0.1.1"
authors = ["Ian Nalbech <iannalbech87@gmail.com>"]
description = "A Rust wrapper for the Ark Ecosystem"
license = "MIT"

[dependencies]
reqwest = "0.8.0"
futures = "0.1.15"
tokio-core = "0.1.6"
tokio-io = "0.1"
tokio-tls = "0.1"
error-chain = "0.10"
serde = "1.0"
serde_derive = "1.0"
